Se elimina controlador y modelo de la entidad ubicacion
